# CLearning

./: 0.txt  12.txt  4.txt  5.txt  8.txt  CMakeLists.txt  README.md  backup.cpp  log.txt  main.cpp  not_overlap.cpp  numa_test.out  numa_test_bind.cpp  numa_test_modify.cpp  numa_test_original.cpp  numabind.cpp  pthread_basic_usage.cpp  test.cpp  test.txt  testify.cpp
